fixed copy on mobile, added wishlist app photo to applications route

--- a/src/app/components/Card/style.scss
+++ b/src/app/components/Card/style.scss
@@ -1,15 +1,21 @@
 .card{
   display: grid;
   grid-template-columns: 1fr 3fr;
+  gap: 1rem;
+  @media screen and (max-width: 640px){
+    &{
+      grid-template-columns: 1fr;
+    }
+  }
   .link{
     text-decoration: none;
     color: var(--text);
   }
   .card-media{
     width: 100%;
-    min-height: 225px;
+    min-height: 150px;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     // background-color: var(--border-light);
   }
