--- a/src/app/components/Subtitle/style.scss
+++ b/src/app/components/Subtitle/style.scss
@@ -3,7 +3,7 @@ p{
   font-weight: 300;
   line-height: 1.5;
   color: var(--text-secondary);
-  margin: 0 0 1.5rem 0;
+  margin: 0 0 1rem 0;
   strong {
     color: var(--text);
   }
